// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TaskBase
message TaskBase
{	
	
	
	repeated TTaskDefine TTask = 1; // TTask

}

// Defined in table: TTask
message TTaskDefine
{	
	
	
	optional uint32 Id = 1; // id
	
	
	optional string Desc = 2; // 描述
	
	
	optional int32 Count = 3; // 计数
	
	
	optional string Reward = 4; // 奖励

}

