// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: MapEvent
message MapEvent
{	
	
	
	repeated TMapEventDefine TMapEvent = 1; // TMapEvent

}

// Defined in table: TMapEvent
message TMapEventDefine
{	
	
	
	optional uint32 Id = 1; // ID
	
	
	optional string Desc = 2; // 描述
	
	
	optional uint32 MoneyType = 3; // 消耗(1金币2钻石3体力4道具)
	
	
	optional uint32 Price = 4; // 消耗数值
	
	
	optional string Icon = 5; // 图标
	
	
	optional string Reward = 6; // 奖励

}

