// --------------------------------------------------------------------------
/// @brief 战场消息, 消息通过Gate转发到客户端
// --------------------------------------------------------------------------
syntax = "proto2";
import "serialize.proto";
package msg;

// G2R 发送个人信息到游戏房间
message BT_UploadGameUser   {
    optional int64 roomid = 1;
    optional msg.Serialize bin = 2;     // TODO: 玩家数据没必要全部发送
}

// C2R 房间存在，直接进入房间, 客户端参数留空
message BT_ReqEnterRoom {
    optional int64 roomid = 1;
    optional uint64 userid = 2;
    optional string token = 3;
}

// R2C 房间初始化
message BT_GameInit {
    optional int64  roomid = 1;
    optional uint64 ownerid = 2;
    optional int32  gamekind = 3;
}

// 对象定义
message BT_RoomUser {
    optional uint64 id = 1;
    optional string name = 2;
    optional string face = 3;
    optional uint32 seatno = 4;     // 座位号
}

// R2C 新玩家进入房间
message BT_NewUserInRoom {
    optional BT_RoomUser user = 1;
}

// R2C 发送房间所有玩家
message BT_SendRoomUser {
    repeated BT_RoomUser users = 1;
}

// R2C 游戏开始
message BT_GameStart {
    optional int64 roomid = 1;
    optional uint64 ownerid = 2;
}

// R2G 游戏结束
message BT_GameEnd {
    optional int64 roomid = 1;
    optional uint64 ownerid = 2;
    optional string reason = 3;
    optional msg.Serialize bin = 4;     // TODO: 玩家数据没必要全部发送
}

// G2C 通知客户端游戏结束
message BT_GameOver {
    optional int64 roomid = 1;
}

// C2R 退出游戏房间
message BT_ReqLeaveGameRoom {
    optional int64 roomid = 1;
    optional uint64 userid = 2;
    optional uint32 gold = 3;
}

// C2R 从座位站起
message BT_ReqStandUpFromSeat {
    optional uint64 userid = 1;
}

